tests/NormalTests/paczka1/small_fuzzy/67013691.err
Error in line 6: bYWBjA A859 9,1
Error in line 11: rztacnjiR A294 29,0
